# rust-bitcoind-json-rpc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  notes.md
.github/workflows/: cron-daily-fuzz.yml  rust.yaml
bitcoind/: Cargo.toml  README.md  build.rs
bitcoind/src/: client.rs  client_versions.rs  lib.rs  versions.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/contrib/: test_vars.sh
client/src/: lib.rs
client/src/client_sync/: error.rs  mod.rs  v18.rs  v20.rs  v21.rs  v23.rs  v24.rs  v25.rs  v26.rs  v27.rs  v28.rs
client/src/client_sync/v17/: blockchain.rs  control.rs  generating.rs  mod.rs  network.rs  raw_transactions.rs  wallet.rs
client/src/client_sync/v18/: mod.rs
client/src/client_sync/v19/: mod.rs  wallet.rs
client/src/client_sync/v22/: mod.rs  wallet.rs
client/src/client_sync/v28/: mod.rs  raw_transactions.rs
contrib/: crates.sh  run_bitcoind.sh
fuzz/: Cargo.toml  README.md  generate-files.sh
integration_test/: Cargo.toml
integration_test/src/: lib.rs
integration_test/src/v17/: blockchain.rs  control.rs  generating.rs  mod.rs  network.rs  raw_transactions.rs  wallet.rs
integration_test/src/v19/: mod.rs  wallet.rs
integration_test/src/v22/: blockchain.rs  mod.rs  wallet.rs
integration_test/src/v28/: mod.rs  raw_transactions.rs
integration_test/tests/: v17_api.rs  v18_api.rs  v19_api.rs  v20_api.rs  v21_api.rs  v22_api.rs  v23_api.rs  v24_api.rs  v25_api.rs  v26_api.rs  v27_api.rs  v28_api.rs
json/: CHANGELOG.md  Cargo.toml  README.md
json/src/: lib.rs
json/src/model/: blockchain.rs  control.rs  generating.rs  mod.rs  network.rs  raw_transactions.rs  util.rs  wallet.rs  zmq.rs
json/src/v17/: blockchain.rs  control.rs  generating.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  rpc-api.txt  util.rs  wallet.rs
json/src/v17/blockchain/: convert.rs  mod.rs
json/src/v17/generating/: convert.rs
json/src/v17/network/: convert.rs
json/src/v17/raw_transactions/: convert.rs  mod.rs
json/src/v17/wallet/: convert.rs  mod.rs
json/src/v18/: mod.rs  rpc-api.txt
json/src/v19/: blockchain.rs  mod.rs  rpc-api.txt  wallet.rs
json/src/v19/blockchain/: convert.rs  mod.rs
json/src/v19/wallet/: convert.rs  mod.rs
json/src/v20/: mod.rs  rpc-api.txt
json/src/v21/: mod.rs  rpc-api.txt
json/src/v22/: mod.rs  wallet.rs
json/src/v22/blockchain/: convert.rs
json/src/v22/network/: convert.rs
json/src/v22/wallet/: convert.rs  mod.rs
json/src/v23/: mod.rs  rpc-api.txt
json/src/v24/: mod.rs  rpc-api.txt
json/src/v25/: mod.rs  rpc-api.txt  wallet.rs
json/src/v25/wallet/: mod.rs
json/src/v26/: mod.rs
json/src/v27/: mod.rs  rpc-api.txt
json/src/v28/: blockchain.rs  mod.rs  network.rs  raw_transactions.rs  rpc-api.txt
jsonrpc/: Cargo.toml
jsonrpc/src/http/: minreq_http.rs  simple_http.rs
regtest/: CHANGELOG.md  Cargo.toml  README.md  build.rs
regtest/sha256/: bitcoin-core-0.17.2-SHA256SUMS.asc  bitcoin-core-28.0-SHA256SUMS
regtest/src/: client_versions.rs  lib.rs  versions.rs
src/: lib.rs
src/client_sync/: error.rs  mod.rs  v26.rs
src/client_sync/v17/: blockchain.rs  mod.rs
src/client_sync/v18/: mod.rs
src/json/: mod.rs
src/json/v17/: mod.rs
src/json/v17/blockchain/: .#mod.rs  convert.rs  mod.rs
src/json/v17/control/: mod.rs
src/json/v17/generating/: convert.rs  mod.rs
src/json/v17/mining/: mod.rs
src/json/v17/network/: convert.rs  mod.rs
src/json/v17/raw_transactions/: mod.rs
src/json/v17/util/: mod.rs
src/json/v17/wallet/: convert.rs  mod.rs
src/json/v17/zmq/: mod.rs
src/json/v18/: mod.rs
src/json/v22/: mod.rs  rpc-api.txt
src/json/v22/blockchain/: convert.rs  mod.rs
src/json/v22/generating/: convert.rs  mod.rs
src/json/v22/network/: convert.rs  mod.rs
src/json/v22/wallet/: convert.rs  mod.rs
src/json/v26/: blockchain.rs  mod.rs  network.rs
src/json/v26/wallet/: convert.rs  mod.rs
src/model/: blockchain.rs  generating.rs  mining.rs  raw_transactions.rs  wallet.rs
tests/: v17_api.rs  v18_api.rs  v22_api.rs  v26_api.rs
tests/client/: mod.rs
tests/client/v17/: blockchain.rs  control.rs  generating.rs  mod.rs  network.rs  wallet.rs
tests/client/v22/: blockchain.rs  wallet.rs
