[workspace]
members = ["client", "json"]
exclude = ["integration_test"]
resolver = "2"

[patch.crates-io.bitcoind-json-rpc-client]
path = "client"

[patch.crates-io.bitcoind-json-rpc-types]
path = "json"

[patch.crates-io.bitcoind]
git = "https://github.com/tcharding/bitcoind"
branch = "bitcoind-json-rpc"
