[package]
name = "bitcoind-json-rpc-client"
version = "0.3.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Tobin C. Harding <me@tobin.cc>"
]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoind-json-rpc"
description = "Bitcoin Core JSON-RPC client"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Enable this feature to get a blocking JSON-RPC client.
client-sync = ["jsonrpc"]

[dependencies]
bitcoin = { version = "0.33.0-alpha", default-features = false, features = ["std", "serde"] }
json = { package = "bitcoind-json-rpc-types", version = "0.3.0", default-features = false, features = [] }
log = "0.4"
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117" }

jsonrpc = { version = "0.18.0", features = ["minreq_http"], optional = true }

[dev-dependencies]
