[package]
name = "integration-test"
version = "0.1.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
description = "Integration tests for bitcoind-json-rpc-client/types"
edition = "2021"

# Please note, in this crate the version features are mutally exclusive.
#
# - `cargo test --all-features` is the same as `cargo test --features=v26_2`
# - `cargo test --no-default-features` skips all tests.
[features]
# Enable the same feature in `bitcoind` and the version feature here.
# All minor releases (but only the latest patch release).
"27_1" = ["v27", "bitcoind/27_1"]
"27_0" = ["v27", "bitcoind/27_0"]
"26_2" = ["v26", "bitcoind/26_2"]
"26_1" = ["v26", "bitcoind/26_1"]
"26_0" = ["v26", "bitcoind/26_0"]
"25_2" = ["v25", "bitcoind/25_2"]
"25_1" = ["v25", "bitcoind/25_1"]
"25_0" = ["v25", "bitcoind/25_0"]
"24_2" = ["v24", "bitcoind/24_2"]
"24_1" = ["v24", "bitcoind/24_1"]
"24_0_1" = ["v24", "bitcoind/24_0_1"]
"23_2" = ["v23", "bitcoind/23_2"]
"23_1" = ["v23", "bitcoind/23_1"]
"23_0" = ["v23", "bitcoind/23_0"]
"22_1" = ["v22", "bitcoind/22_1"]
"22_0" = ["v22", "bitcoind/22_0"]
# Only the latest minor version for these.
"0_21_2" = ["v21", "bitcoind/0_21_2"]
"0_20_2" = ["v20", "bitcoind/0_20_2"]
"0_19_1" = ["v19", "bitcoind/0_19_1"]
"0_18_1" = ["v18", "bitcoind/0_18_1"]
"0_17_1" = ["v17", "bitcoind/0_17_1"]

# Each minor version is tested with the same client.
"v27" = []
"v26" = []
"v25" = []
"v24" = []
"v23" = []
"v22" = []
"v21" = []
"v20" = []
"v19" = []
"v18" = []
"v17" = []

[dependencies]
bitcoin = { version = "0.33.0-alpha", default-features = false, features = ["std", "serde"] }
client = { package = "bitcoind-json-rpc-client", version = "0.3.0", default-features = false, features = ["client-sync"] }
bitcoind = { package = "bitcoind-json-rpc-regtest", version = "0.3.0", default-features = false, features = [] }
rand = "0.8.5"
env_logger = "0.9.0"

[dev-dependencies]

[patch.crates-io.bitcoind-json-rpc-client]
path = "../client"

[patch.crates-io.bitcoind-json-rpc-types]
path = "../json"

[patch.crates-io.bitcoind-json-rpc-regtest]
path = "../regtest"


[patch.crates-io.base58ck]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin-io]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin-primitives]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"

[patch.crates-io.bitcoin-units]
git = "https://github.com/tcharding/rust-bitcoin"
branch = "10-18-consensus-error"
