[package]
name = "bitcoind-json-rpc-types"
version = "0.3.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>",
    "Tobin C. Harding <me@tobin.cc>"
]
license = "CC0-1.0"
repository = "https://github.com/tcharding/rust-bitcoind-json-rpc"
description = "Bitcoin Core JSON-RPC API types"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[features]
default = []

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false,  features = ["std"] }
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117" }

[dev-dependencies]
