[package]
name = "bitcoind-json-rpc-regtest"
version = "0.2.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
license = "MIT"
repository = "https://github.com/tcharding/rust-bitcoind-json-rpc"
description = "Utility to run a regtest bitcoind process, useful in integration testing environments"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[dependencies]
bitcoind-json-rpc-client = { version = "0.2", features = ["client-sync"] }
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"
tempfile = "3"
serde_json = { version = "1.0.117" }

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
minreq = { version = "2.9.1", default-features = false, features = [
    "https",
], optional = true }
zip = { version = "0.6", optional = true }
anyhow = "1.0.66"

# Please note, in this crate the version features are mutally exclusive.
#
# - `cargo test --all-features` is the same as `cargo test --features=v26_0`
# - `cargo test --no-default-features` uses `v26_0` also.
[features]
# download is not supposed to be used directly only through selecting one of the version feature
"download" = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]

# We support all minor releases (but only the latest patch release).
"26_0" = ["download", "25_2"]
"25_2" = ["download", "25_1"]
"25_1" = ["download", "25_0"]
"25_0" = ["download", "24_2"]
"24_2" = ["download", "24_1"]
"24_1" = ["download", "24_0_1"]
"24_0_1" = ["download", "23_2"]
"23_2" = ["download", "23_1"]
"23_1" = ["download", "23_0"]
"23_0" = ["download", "22_1"]
"22_1" = ["download", "22_0"]
"22_0" = ["download", "0_21_2"]
# We only support the latest minor version for these.
"0_21_2" = ["download", "0_20_2"]
"0_20_2" = ["download", "0_19_1"]
"0_19_1" = ["download", "0_18_1"]
"0_18_1" = ["download", "0_17_1"]
"0_17_1" = ["download"]

"doc" = [] # used only for documentation building


[package.metadata.docs.rs]
features = ["download", "doc", "26_0"]
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io.bitcoind-json-rpc-client]
path = "../client"

[patch.crates-io.bitcoind-json-rpc-types]
path = "../json"
